[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/ennemies/bitonio_sheet.png" type="Texture" id=1]
[ext_resource path="res://source/actors/Bitonio.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 55.0
height = 96.0

[sub_resource type="CircleShape2D" id=2]
radius = 391.082

[sub_resource type="Animation" id=4]
resource_name = "knocked"
length = 0.5
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 180.0, 360.0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "walk"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[node name="Bitonio" type="KinematicBody2D" groups=["enemy"]]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 4, 4 )
texture = ExtResource( 1 )
hframes = 4
frame = 2

[node name="Hurtbox" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -1, 37 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="Attackbox" type="Area2D" parent="." groups=["enemy"]]
visible = false

[node name="Attackbox" type="CollisionShape2D" parent="Attackbox"]
shape = SubResource( 2 )

[node name="AttackTimer" type="Timer" parent="Attackbox"]

[node name="Hitbox" type="Area2D" parent="."]
visible = false
position = Vector2( -1, 37 )
rotation = 1.5708

[node name="Hitbox" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource( 1 )

[node name="KnockbackTimer" type="Timer" parent="Hitbox"]
wait_time = 0.5

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "walk"
anims/knocked = SubResource( 4 )
anims/walk = SubResource( 3 )

[connection signal="body_entered" from="Attackbox" to="." method="_on_Attackbox_body_entered"]
[connection signal="timeout" from="Attackbox/AttackTimer" to="." method="_on_AttackTimer_timeout"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="timeout" from="Hitbox/KnockbackTimer" to="." method="_on_KnockbackTimer_timeout"]
